Upgrade main url

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: talks archive
 
 baseurl: "/talks"
-url: "https://moisesguimaraes.github.io"
+url: "https://webknjaz.github.io"
 
 email: guimaraes+talks@pm.me
 
